tests/ui/parser/issues/issue-88770.rs
// Regression test for the ICE described in #88770.

// error-pattern:this file contains an unclosed delimiter

fn m(){print!("",(c for&g
u
e
e
